--- a/templates/base.html
+++ b/templates/base.html
@@ -32,13 +32,11 @@
             <div class="collapse navbar-collapse text-center justify-content-end" id="navbarLightSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item mx-1">
-                        <a class="nav-link" href="#"><i class="fa d-inline fa-facebook-square"></i>&nbsp; share</a>
+                        <a class="nav-link" href="mailto:master@fordina.com"><i class="fa d-inline fa-envelope"></i>
+ For questions, email master@fordina.com</a>
                     </li>
                     <li class="nav-item mx-1">
-                        <a class="nav-link" href="#"><i class="fa d-inline fa-twitter"></i>&nbsp; tweet</a>
-                    </li>
-                    <li class="nav-item mx-1">
-                        <a class="nav-link" href="#"><i class="fa d-inline fa-pinterest"></i>&nbsp; pin</a>
+                        <a class="nav-link" href="https://t.me/xess777"><i class="fa d-inline fa-telegram"></i> Telegram</a>
                     </li>
                 </ul>
             </div>
