--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,8 @@
             <div class="row">
                 <div class="col-12">
                     <h2>Add document</h2>
-                    <hr> </div>
+                    <hr>
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-8 p-3">
@@ -39,6 +40,16 @@
                     <button type="button" class="btn btn-primary my-2 disabled" disabled id="saveDigestBtn">Submit</button>
                 </div>
             </div>
+            <!--QR code-->
+            <div class="row">
+                <div class="qrcode-wrapper col-md-12 p-3" style="display: none">
+                    <p>Scan QRCode below using <a target="_blank" href="https://nano.nebulas.io/index_en.html">NAS nano</a>
+or use
+<a target="_blank" href="https://github.com/nebulasio/WebExtensionWallet">Web Extension Wallet</a></p>
+                    <div class="qrcode-container"></div>
+                </div>
+            </div>
+            <!--/QR code-->
         </div>
     </div>
     <!--/New document-->
