--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,14 +2,12 @@
 
 {% block content %}
     <!--Description-->
-    <div class="py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2>Proof of Existence</h2>
-                    <hr>
-                    <p>Nebulas Notarizer is a prototype notary and "Proof of Existence" DAPP. By submitting hashes of documents you can proof on a later date that you were privileged to certain information at a point in history.</p>
-                    </div>
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-12">
+                <h2>Proof of Existence</h2>
+                <hr>
+                <p>Nebulas Notarizer is a prototype notary and "Proof of Existence" DAPP. By submitting hashes of documents you can proof on a later date that you were privileged to certain information at a point in history.</p>
                 </div>
             </div>
         </div>
@@ -17,72 +15,68 @@
     <!--/Description-->
 
     <!--New document-->
-    <div class="py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2>Add document</h2>
-                    <hr>
-                </div>
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-12">
+                <h2>Add document</h2>
+                <hr>
             </div>
-            <div class="row">
-                <div class="col-md-8 p-3">
-                    <form>
-                        <h5>Document to certification</h5>
-                        <div class="form-group my-3">
-                            <input type="file" class="form-control-file" id="certifiedFile">
-                        </div>
-                        <h5>Document digest</h5>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Disabled input" id="fileDigest" disabled="">
-                        </div>
-                    </form>
-                    <button type="button" class="btn btn-primary my-2 disabled" disabled id="saveDigestBtn">Submit</button>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-md-8">
+                <form>
+                    <h5>Document to certification</h5>
+                    <div class="form-group my-3">
+                        <input type="file" class="form-control-file" id="certifiedFile">
+                    </div>
+                    <h5>Document digest</h5>
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Disabled input" id="fileDigest" disabled="">
+                    </div>
+                </form>
+                <button type="button" class="btn btn-primary my-2 disabled" disabled id="saveDigestBtn">Submit</button>
             </div>
-            <!--QR code-->
-            <div class="row">
-                <div class="qrcode-wrapper col-md-12 p-3" style="display: none">
-                    <p>Scan QRCode below using <a target="_blank" href="https://nano.nebulas.io/index_en.html">NAS nano</a>
+        </div>
+        <!--QR code-->
+        <div class="row">
+            <div class="qrcode-wrapper col-md-12" style="display: none">
+                <p>Scan QRCode below using <a target="_blank" href="https://nano.nebulas.io/index_en.html">NAS nano</a>
 or use
 <a target="_blank" href="https://github.com/nebulasio/WebExtensionWallet">Web Extension Wallet</a></p>
-                    <div class="qrcode-container"></div>
-                </div>
+                <div class="qrcode-container"></div>
             </div>
-            <!--/QR code-->
         </div>
+        <!--/QR code-->
     </div>
     <!--/New document-->
 
     <!--Certifications-->
-    <div class="py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <h2>Last Certifications</h2>
-                    <hr class="mb-4"> </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 p-3">
-                    <table class="table table-hover table-striped table-bordered">
-                        <thead class="thead-inverse">
-                        <tr>
-                            <th scope="col">Document digest</th>
-                            <th scope="col">TxHash</th>
-                            <th scope="col">Timestamp</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {% for row in last_digests %}
-                        <tr>
-                            <td>{{ row.digest }}</td>
-                            <td>{{ row.txHash }}</td>
-                            <td>{{ row.timestamp }}</td>
-                        </tr>
-                        {% endfor %}
-                        </tbody>
-                    </table>
-                </div>
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-12">
+                <h2>Last Certifications</h2>
+                <hr class="mb-4"> </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 p-3">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead class="thead-inverse">
+                    <tr>
+                        <th scope="col">Timestamp</th>
+                        <th scope="col">Document digest</th>
+                        <th scope="col">Transaction</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for row in last_digests %}
+                    <tr>
+                        <td>{{ row.timestamp }}</td>
+                        <td>{{ row.digest }}</td>
+                        <td><a target="_blank" href="https://explorer.nebulas.io/#/tx/{{ row.txHash }}">See transaction</a></td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
