--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -37,6 +37,9 @@
                 <button type="button" class="btn btn-primary my-2 disabled" disabled id="saveDigestBtn">Submit</button>
             </div>
         </div>
+    </div>
+
+    <div class="container py-3">
         <!--QR code-->
         <div class="row">
             <div class="qrcode-wrapper col-md-12" style="display: none">
