--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,10 +13,7 @@
     <header>
         <div class="container">
             <div class="text-center">
-                <div class="col-12">
-                    <h1 class="display-3 text-capitalize">Nebulas Notarizer</h1>
-                    <p class="lead text-muted">Written forever.</p>
-                </div>
+                <img src="{{ url_for('static', filename='images/logo.png')}}" width="425" height="177" alt="Nebulas Notarizer" class="logo">
             </div>
         </div>
     </header>
