--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <div class="container">
-            <div class="text-center">
-                <img src="{{ url_for('static', filename='images/logo.png')}}" width="425" height="177" alt="Nebulas Notarizer" class="logo">
+            <div class="text-left">
+                <img src="{{ url_for('static', filename='images/logo.png')}}" alt="Nebulas Notarizer" class="logo">
             </div>
         </div>
     </header>
