--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -24,7 +24,7 @@ canvas {
 
 header {
     background: #7892B6 url(/static/images/bg.png) repeat;
-    padding: 50px;
+    padding: 50px 15px;
 }
 
 main {
